--- a/index.html
+++ b/index.html
@@ -1,40 +1,46 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
+    <link type="text/css" rel="stylesheet" href="./public/reset.css">
+    <link type="text/css" rel="stylesheet" href="./public/style.css">
     <title>Number Guesser</title>
   </head>
-  <body>
 
+  <body>
     <div class="container_nav">
       <div class="nav_bar">
-        <p id="number">Number </p>
-        <p id="guesser">Guesser</p>
+        <span id="number">Number</span> <span id="guesser">Guesser</span>
       </div>
     </div>
 
-    <div class="form">
-      <form >
-        <input type="text" name="guess" value="Enter your guess" size= 40>
+    <div class="container">
+      <div class="container_1">
+      </div>
 
-        <div class="guess_buttom">
-          <button type="button" name="guess">Guess</button>
+      <div class="container_2">
+
+        <div class="form">
+            <input type="number" class="input_form" name="guess" placeholder="Enter your guess" > <br>
+
+            <div class="container_button">
+              <button type="button" class="button" name="guess">Guess</button>
+              <button type="button" class="button" name="clear">Clear</button>
+            </div>
         </div>
 
-        <div class="clear_buttom">
-          <button type="button" name="clear">Clear</button>
+        <div class="display">
+          <h4>Your last guess was</h4><br>
+          <h1 class="number_guess"> </h1>
+          <h4 id="dirrection"> </h4>
         </div>
 
-      </form>
-    </div>
+        <div class="container_button">
+          <button type="button" class="button reset" name="reset">reset</button>
+        </div>
+      </div>
+      <div class="container_3">
 
-    <div class="display">
-      <h4>Your Last guess was</h4><br>
-      <h1>0</h1>
-      <h4 id="dirrection"> </h4>
-    </div>
-
-    <div class="reset_container">
-      <button type="button" name="reset">reset</button>
+      </div>
     </div>
   </body>
 </html>
